# FastIoC

./: .gitignore  404.html  README.md  container.py  custom_types.py  errors.py  index.html  injectify.py  mkdocs.yml  pyproject.toml  sitemap.xml  style.css  test.py  todo.txt
.github/workflows/: publish.yml
0.1.2/: 404.html  index.html  objects.inv  sitemap.xml
0.1.2/LICENSE/: index.html
0.1.2/controller/: index.html
0.1.2/search/: search_index.json
0.2.0/: 404.html  index.html  objects.inv  sitemap.xml
0.2.0/LICENSE/: index.html
0.2.0/controller/: index.html
0.2.0/data/: index.html
0.2.0/dispose/: index.html
0.2.0/hook/: index.html
0.2.0/injectify/: index.html
0.2.0/lifetime/: index.html
0.2.0/log/: index.html
0.2.0/nested/: index.html
0.2.0/override/: index.html
0.2.0/passive/: index.html
0.2.0/register/: index.html
LICENCE/: index.html
controller/: index.html
docs/: controller.md  data.md  dispose.md  hook.md  index.md  injectify.md  lifetime.md  log.md  nested.md  override.md  passive.md  register.md  resolve.md  scale.md  style.css
fastdi/: __init__.py  container.py  custom_types.py  definitions.py  errors.py  injectify.py  integrations.py  test.py  utils.py
fastioc/: __init__.py  container.py  controller.py
search/: search_index.json
tests/: conftest.py  constants.py  dependencies.py  test_container.py  test_controller.py  test_dispose.py  test_endpoint.py  test_hook.py  test_injectify.py  test_injection.py  test_integrations.py  test_integrity.py  test_lifetime.py  test_nested.py  test_override.py  test_provider.py
(+23 files in other folders)
