[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "FastDI"
version = "0.1.0"
description = "IoC/DI container for FastAPI with automatic type-based dependency injection"
authors = ["Amir R. Aliakbari (OpenMindAmir) <OpenMindAmir@gmail.com>"]
readme = "README.md"
packages = [{ include = "fastdi" }]

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^6.2.1"
