[project]
name = "FastDI"
version = "0.1.0"
description = "IoC/DI container for FastAPI with automatic type-based dependency injection"
authors = [
    {name = "Amir R. Aliakbari (@OpenMindAmir)", email = "OpenMindAmir@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "typeguard>=4.4.4",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
